--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+.leaflet-container {
+
+  width: 100v;
+  height: 100vh;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
